5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4146/executions/1575_1326.log
== TEST (2019-03-12 11:29:20) 
-- CODE:
print("R$")print(75)
-- ERROR:
File "XXXX", line 1
    print("R$")print(75)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:29:27) 
-- CODE:
print("R$")
print(75)
-- OUTPUT:
R$
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:29:34) 
-- CODE:
print("R$")    print(75)
-- ERROR:
File "XXXX", line 1
    print("R$")    print(75)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:29:39) 
-- CODE:
print("R$")    
print(75)
-- OUTPUT:
R$
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:29:59) 
-- CODE:
print(75)   
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:30:09) 
-- CODE:
print(75)   
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:30:20) 
-- CODE:
print(75)   
-- EXECUTION TIME:
0.189059
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
